syntax = "proto3";
package babylonchain.babylon.v1beta1;

import "babylonchain/babylon/v1beta1/babylon.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "amino/amino.proto";

option go_package = "github.com/babylonlabs-io/babylon-sdk/x/babylon/types";
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.equal_all) = false;

// Query provides defines the gRPC querier service
service Query {
  // Params queries the parameters of x/babylon module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/babylonchain/babylon/v1beta1/params";
  }
}

// QueryParamsRequest is the request type for the
// Query/Params RPC method
message QueryParamsRequest {}

// QueryParamsResponse is the response type for the
// Query/Params RPC method
message QueryParamsResponse {
  Params params = 1
      [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];
}
